deployment/kubernetes/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nsddos-default
spec:
  podSelector:
    matchLabels:
      app: nsddos
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - ports:
        - protocol: TCP
          port: 8008
        - protocol: TCP
          port: 3000
  egress:
    - {}
